src/styles.css
h1 {
  text-align: center;
  padding: 10px 5px 0 5px;
  font-size: 40px;
  margin: 5px 10px 10px 10px;
  font-weight: 500;
  color: #fff;
}

h2 {
  text-align: center;
  font-size: 25px;
  padding: 0;
  margin: 0 auto;
  font-weight: normal;
}

h4 {
  text-align: center;
  font-weight: 200px;
  font-size: 35px;
  margin: 15px;
  color: black;
  font-family: "Quicksand", sans-serif;
}

.conditions {
  list-style: none;
  text-align: center;
  color: black;
}

.fas {
  font-size: 25px;
  color: black;
  padding: 5px;
}

.form-control {
  margin: 15px 0 15px 20px;
}

.repository {
  margin: 0 auto;
  display: block;
  text-align: center;
}

.temperatureDisplay {
  text-align: center;
  padding: 0;
  margin: 15px 15px 25px 15px;
  font-size: 40px;
  color: #fff;
  border: 2px solid #fff;
  border-radius: 10px;
  font-family: "Be Vietnam Pro", sans-serif;
  font-weight: lighter;
}

.temperatureDisplay .active {
  color: white;
  cursor: default;
  text-decoration: none;
}

.temperatureDisplay .active:hover {
  text-decoration: none;
}

.units {
  text-decoration: none;
  font-size: 30px;
}

.weatherapp {
  border: 2px solid grey;
  border-radius: 10px;
  max-width: 550px;
  margin: 5px auto;
  display: block;
  background-image: url(https://images.pexels.com/photos/1828305/pexels-photo-1828305.jpeg?auto=compress&cs=tinysrgb&dpr=2&w=500);
  font-family: "Quicksand", sans-serif;
}
.weather-forecast {
  margin-top: 20px;
  margin: 0 0 15px 80px;
  text-align: center;
  font-family: "Be Vietnam Pro", sans-serif;
}

.weather-forecast-temperature-min {
  opacity: 0.7;
}

.weather-forecast-temperature {
  font-size: 13px;
  color: black;
}

#current-location-button {
  font-size: 14px;
  margin: 17px 0 0 10px;
  padding: 5px 15px;
  background-color: #212529;
  color: white;
  opacity: 0.6;
  border-color: #212529;
}

#description {
  text-align: center;
}

#icon {
  padding: 5px 0 10px 0;
  margin: 0 auto;
  display: block;
}
#search-button {
  font-size: 14px;
  padding: 5px 15px;
  margin: 17px 2px 0 15px;
  background-color: #212529;
  color: white;
  opacity: 0.6;
  border-color: #212529;
}

